MB-16292: Replica/Pending vb state switched in takeover packet.

The encoding of the takeover packet changes the value of what
ep-engine uses. The receive side isn't undoing the switch so
ep-engine thinks it set state to pending, but it gets changed
to replica.

Change-Id: Ieab86169e2ad5ed94c2d3faed747a7b308394e9f
Reviewed-on: http://review.couchbase.org/55287
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>